--- a/config_example.json
+++ b/config_example.json
@@ -3,5 +3,6 @@
   "prefix": "$",
   "description": "A Python Discord bot aimed at effectively destroying specific pictures from the existence of the server.",
   "owner_ids": ["your owner is"],
-  "admins": ["your admins id"]
+  "admins": ["your admins id"],
+  "bot_id": "id here, remove quotation mark"
 }
